@@ -1,6 +1,6 @@
 ﻿## Interface: 50400
 ## Author: Benik
-## Version: 1.86
+## Version: 1.87
 ## Title: |cff1784d1ElvUI|r Location Plus
 ## Notes: a plugin for ElvUI, that adds location, coords, 2 Datatexts and a tooltip full of info.
 ## RequiredDeps: ElvUI
