@@ -5,6 +5,7 @@ if not L then return end
 L["Adds 2 digits in the coords"] = "Fügt 2 Nachkommastellen hinzu"
 L["Adds 6 pixels at the Main Location Panel height."] = "Fügt der Hauptanzeige 6 Pixel in der Höhe hinzu."
 L["Adjust All Panels Height."] = "Höhe aller Bedienelemente anpassen"
+L["Adjust coords updates (in seconds) to avoid cpu load. Bigger number = less cpu load. Requires reloadUI."] = "Adjust coords updates (in seconds) to avoid cpu load. Bigger number = less cpu load. Requires reloadUI." -- Requires localization
 L["Adjust the DataTexts Width."] = "Anpassen der TextDaten Breite"
 L["Adjust the Location Panel Width."] = "Breite vom Location Panel einstellen."
 L["All Panels Height"] = "Höhe aller Bedienelemente"
@@ -68,6 +69,7 @@ L["Toggle Datatexts"] = "Zeige/Verstecke Infotexte"
 L["Toggle WorldMap"] = "Weltkarte anzeigen/verstecken"
 L["Truncates the text rather than auto enlarge the location panel when the text is bigger than the panel."] = "Truncates the text rather than auto enlarge the location panel when the text is bigger than the panel." -- Requires localization
 L["Truncate text"] = "Truncate text" -- Requires localization
+L["Update Timer"] = "Update Timer" -- Requires localization
 L["Use Custom Location Color"] = "Benutzerdefinierte Standort-Farbe verwenden"
 L["with Entrance Coords"] = "with Entrance Coords" -- Requires localization
 L["Zone and Subzone"] = "Zone und Unterzone"
