@@ -1,3 +1,6 @@
+[b]1.87[/b]
+*Added a slider in the options so the user can adjust the coords update time, to prevent cpu load. Bigger number -> less cpu load -> slower coords update.
+
 [b]1.86[/b]
 *Fixed CPU load issues (thanks Einistein for noticing this)
 
